<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_partnership"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tbionline.incourts.in.example.incourtdemo.activities.PartnershipActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_custometoolbar_size"
        android:background="?attr/setting_top_background_color">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="@dimen/dim_icons_size"
            android:layout_height="@dimen/dim_icons_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dim_searchicon_padding"
            android:src="?attr/BackArrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/partnership"
            android:textColor="?attr/setting_top_text_color"
            android:textSize="@dimen/dim_optiontext_size"
            android:textStyle="normal" />
    </RelativeLayout>

    <View style="@style/element_divider" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color_white"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:lineSpacingExtra="10dp"
                android:paddingBottom="@dimen/dim_partnership_margin_top"
                android:paddingTop="40dp"
                android:textSize="15sp"
                android:text="@string/loremipsum"
                android:textColor="@color/clr_blue" />


            <EditText
                android:id="@+id/name_edit"
                style="@style/partnership_edittext"
                android:layout_marginTop="@dimen/dim_partnership_margin_top"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/email_edit"
                style="@style/partnership_edittext"
                android:layout_marginTop="@dimen/dim_partnership_margin_top"

                android:hint="@string/email" />

            <EditText
                android:id="@+id/website_edit"
                style="@style/partnership_edittext"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="@dimen/dim_partnership_margin_top"
                android:hint="@string/website" />

            <EditText
                android:id="@+id/phonee_edit"
                style="@style/partnership_edittext"
                android:layout_marginTop="@dimen/dim_partnership_margin_top"
                android:hint="@string/phone" />

            <EditText
                android:id="@+id/whatsapp_edit"
                style="@style/partnership_edittext"
                android:layout_marginTop="@dimen/dim_partnership_margin_top"
                android:hint="@string/whatsapp" />

            <TextView
                android:id="@+id/sendbtn"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_locateme"
                android:gravity="center"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:text="@string/send"
                android:textColor="@color/clr_white"
                android:textSize="17sp" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>
