<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_facebook_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_gray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/facebookview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">




            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="4dp"
                android:text="@string/letyourfriends"
                android:textColor="?attr/day_gray_text"
                android:textSize="18sp"
                android:textStyle="normal" />


           <!-- <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="34dp"
                android:layout_marginTop="34dp"
                android:adjustViewBounds="true"
                android:src="?attr/incourt_logo_fbpage" />-->


        </LinearLayout>

        <LinearLayout
            android:id="@+id/wireview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="34dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="?attr/wire_logo_fbpage" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/shareinterestingnews"
                android:textColor="?attr/day_gray_text"

                android:textSize="18sp"
                android:textStyle="normal" />


        </LinearLayout>


        <ImageView
            android:id="@+id/facebookconnectbtn"
            android:layout_marginTop="34dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_facebookbtn" />

        <ImageView
            android:id="@+id/gmailconnectbtn"
            android:layout_marginTop="16dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/googleloginimage" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:id="@+id/facebook_login_cancel"
        android:text="@string/cancel"
        android:textColor="?attr/day_gray_text"
        android:textSize="18sp" />


</RelativeLayout>
